# rust-web_archived

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/oldroutes/api/: ai.rs  auth.rs  mod.rs
src/routes/: auth.rs  mod.rs
templates/: footer.html  header.html  layout.html  login.html
templates/api/: asyncapi.yaml
